Update for Java 10 and modules; prep for GCS 4.11 release.